--- a/docs/locale/ru/LC_MESSAGES/about/governance.po
+++ b/docs/locale/ru/LC_MESSAGES/about/governance.po
@@ -71,8 +71,8 @@ msgstr ""
 "заинтересованность и компетенцию в данных, касающихся контроля над "
 "компаниями или бенефициарного владения, а также использования таких данных в"
 " интересах общества. Несмотря на то, что разработка стандарта будет "
-"происходить в рамках открытого процесса, в котором может участвовать каждый,"
-" члены рабочей группы берут на себя особую ответственность за руководство "
+"проходить в рамках открытого процесса, в котором может участвовать каждый, "
+"члены рабочей группы берут на себя особую ответственность за руководство "
 "разработкой стандарта и обеспечение принятия во внимание соответствующих "
 "требований, потребностей пользователей и технических аспектов."
 
