--- a/docs/locale/ru/LC_MESSAGES/codelist.po
+++ b/docs/locale/ru/LC_MESSAGES/codelist.po
@@ -629,7 +629,7 @@ msgid ""
 msgstr ""
 "Это физическое лицо было идентифицировано, но идентифицирующая информация не"
 " была предоставлена. Причина непредоставления информации должна быть указана"
-" в сопроводительном поле missingInfoReason."
+" в сопроводительном поле `missingInfoReason`."
 
 #. title
 #: schema/codelists/personType.csv:3
