--- a/docs/locale/ru/LC_MESSAGES/primer/whatisthebods.po
+++ b/docs/locale/ru/LC_MESSAGES/primer/whatisthebods.po
@@ -108,7 +108,7 @@ msgid ""
 "Using BODS simplifies the sharing and use of beneficial ownership "
 "information."
 msgstr ""
-"Использование СДБВ опрощает предоставление и использование информации о "
+"Использование СДБВ упрощает предоставление и использование информации о "
 "бенефициарном владении."
 
 # 02466a5031cd4ffd8b4ce60c5931045e
@@ -125,7 +125,7 @@ msgid ""
 msgstr ""
 "Схема данных описывает то, как может происходить организация и обмен данными"
 " о бенефициарных владельцах юридического лица. Схема определена в формате "
-"структурированных данных, который называется JSON."
+"структурированных данных, именуемом JSON."
 
 # 963686d989ec411daa55aa0415606c0f
 #: ../../primer/whatisthebods.rst:79
