--- a/docs/locale/ru/LC_MESSAGES/schema.po
+++ b/docs/locale/ru/LC_MESSAGES/schema.po
@@ -133,7 +133,7 @@ msgstr ""
 "Кто вносит эту запись? Это может быть ФИО физического лица или название "
 "организации, формирующей личную декларацию (в этом случае просим "
 "удостовериться, что поле ФИО/названия соответствует полю ФИО/названия "
-"организации или физического лица), либо ФИО/название или описание другой "
+"физического лица или организации), либо ФИО/название или описание другой "
 "стороны. Если эта запись прошла верификацию, то она также может включать в "
 "себя название организации, осуществляющей верификацию."
 
@@ -252,7 +252,7 @@ msgstr ""
 "лицах схема должна иметь структуру {JURISDICTION}-{TYPE}, где JURISDICTION "
 "(юрисдикция) — это 3-значный код страны в соответствии со стандартом ISO, а "
 "TYPE (тип) — один из следующих: PASSPORT (паспорт), TAXID (ИНН) или IDCARD "
-"(идентификационная карта). scheme или schemeName (или оба) ДОЛЖНЫ быть "
+"(идентификационная карта). `scheme` или `schemeName` (или оба) ДОЛЖНЫ быть "
 "включены в объект Identifier."
 
 #. /definitions/Identifier/properties/schemeName/title
@@ -268,8 +268,8 @@ msgid ""
 "included in an Identifier object."
 msgstr ""
 "Имя этой схемы, где значение org-id code неизвестно или указана только "
-"непроверенная строка. scheme или schemeName (или оба) ДОЛЖНЫ быть включены в"
-" объект Identifier."
+"непроверенная строка. `scheme` или `schemeName` (или оба) ДОЛЖНЫ быть "
+"включены в объект Identifier."
 
 #. /definitions/Identifier/properties/uri/description
 #: schema/components.json:1
@@ -333,8 +333,8 @@ msgid ""
 msgstr ""
 "Адрес, в котором каждая строка или компонент адреса отделены разрывом строки"
 " или запятой. Если почтовые индексы являются изолированными полями в "
-"исходных системах, то в это поле «адрес» НЕ СЛЕДУЕТ включать почтовый "
-"индекс."
+"исходных системах, то в это поле `address` (адрес) НЕ СЛЕДУЕТ включать "
+"почтовый индекс."
 
 #. /definitions/Address/properties/postCode/title
 #: schema/components.json:1
@@ -552,8 +552,8 @@ msgstr ""
 "Если известна точная доля в процентах, ее следует указать, при этом в "
 "качестве максимального и минимального значений указывается одна и та же "
 "точная доля в процентах. В других случаях максимум и минимум можно "
-"использовать для записи диапазона, в который входит такая доля участия. По "
-"умолчанию минимум указывается включительно, а максимум — не включительно "
+"использовать для записи диапазона, в котором находится такая доля участия. "
+"По умолчанию минимум указывается включительно, а максимум — не включительно "
 "(минимальное значение ≤ доля < максимальное значение). Если вы желаете "
 "изменить эти используемые по умолчанию значения, воспользуйтесь свойствами "
 "exclusiveMinimum и exclusiveMaximum."
@@ -771,7 +771,7 @@ msgid ""
 "motivation is transformation."
 msgstr ""
 "Представление целевого содержимого примечания после применения "
-"преобразования в поле описания. Это поле СЛЕДУЕТ использовать только когда "
+"преобразования в поле описания. Это поле СЛЕДУЕТ использовать, только когда "
 "мотивацией является преобразование."
 
 #. /definitions/Annotation/properties/url/title
@@ -797,7 +797,7 @@ msgid ""
 "A country MUST have a name. A country SHOULD have an ISO 2-Digit county "
 "code."
 msgstr ""
-"Страна ДОЛЖНА иметь название. Для страны СЛЕДУЕТ указывать 2-значный код "
+"Страна ДОЛЖНА иметь название. Для страны СЛЕДУЕТ указать 2-значный код "
 "страны в соответствии со стандартом ISO."
 
 #. /definitions/Country/properties/name/description
@@ -895,8 +895,8 @@ msgstr ""
 "может быть стандартная описательная фраза из исходной системы или "
 "обоснование в форме неструктурированного текста. Данное поле следует "
 "заполнять только в случае отсутствия поля hasPepStatus. Если это поле "
-"присутствует, оно должно быть единственным полем, за исключением поля source"
-" (источник)."
+"присутствует, оно должно быть единственным полем, за исключением поля "
+"`source` (источник)."
 
 #. /definitions/PepStatusDetails/properties/jurisdiction/description
 #: schema/components.json:1
@@ -1056,14 +1056,13 @@ msgid ""
 "Statement MUST have a `isComponent` value of 'false'."
 msgstr ""
 "Представляет ли данная Запись о субъекте компонент отношений косвенного "
-"владения или контроля? Если isComponent имеет значение true: (1) statementID"
-" такой Записи о субъекте ДОЛЖЕН быть элементом в массиве "
-"componentStatementIDs такой основной Записи о владении или контроле, (2) эта"
-" Запись о субъекте ДОЛЖНА стоять перед такой основной Записью о владении или"
-" контроле в пакете СДБВ или потоке, (3) замену этой Записи о субъекте "
-"СЛЕДУЕТ рассмотреть при замене основной Записи о владении или контроле. "
-"Значение isComponent основной Записи о владении или контроле ДОЛЖНО быть "
-"false."
+"владения или контроля? Если `isComponent` имеет значение 'true': (1) "
+"`statementID` такой Записи о субъекте ДОЛЖЕН быть элементом в массиве "
+"`componentStatementIDs` такой основной Записи о владении или контроле, (2) "
+"эта Запись о субъекте ДОЛЖНА стоять перед такой основной Записью о владении "
+"или контроле в пакете СДБВ или потоке, (3) замену этой Записи о субъекте "
+"СЛЕДУЕТ учесть при замене основной Записи о владении или контроле. Значение "
+"`isComponent` основной Записи о владении или контроле ДОЛЖНО быть 'false'."
 
 #. /properties/entityType/description
 #: schema/entity-statement.json:1
@@ -1080,12 +1079,12 @@ msgid ""
 "identity."
 msgstr ""
 "Из [списка допустимых значений entityType](#entitytype). Какого типа этот "
-"субъект? Значение registeredEntity относится к любому юридическому лицу, "
+"субъект? Значение 'registeredEntity' относится к любому юридическому лицу, "
 "созданному через акт официальной регистрации, в результате чего, как "
-"правило, субъекту присваивается идентификатор. Значение legalEntity "
+"правило, субъекту присваивается идентификатор. Значение 'legalEntity' "
 "распространяется на другие организации с явно выраженным статусом "
 "юридического лица (государственные ведомства, международные организации и т."
-" д.). Значение arrangement (соглашение о владении и контроле) "
+" д.). Значение 'arrangement' (соглашение о владении и контроле) "
 "распространяется на искусственные субъекты, описанные в модели данных в "
 "целях связывания воедино одного или нескольких физических или юридических "
 "лиц в отношениях владения или контроля, но не подразумевая, что стороны "
@@ -1103,8 +1102,9 @@ msgid ""
 "An explanation of why this entity has an `entityType` of 'anonymousEntity' "
 "or 'unknownEntity'. A `reason` MUST be specified."
 msgstr ""
-"Объяснение касательно того, почему entityType этого субъекта имеет значение "
-"anonymousEntity или unknownEntity. ДОЛЖНА быть указана причина (reason)."
+"Объяснение касательно того, почему `entityType` этого субъекта имеет "
+"значение 'anonymousEntity' или 'unknownEntity'. ДОЛЖНА быть указана причина "
+"(`reason`)."
 
 #. /properties/unspecifiedEntityDetails/properties/reason/description
 #: schema/entity-statement.json:1
@@ -1194,7 +1194,7 @@ msgstr ""
 #. /properties/dissolutionDate/title
 #: schema/entity-statement.json:1
 msgid "Dissolution date"
-msgstr "Дата роспуска"
+msgstr "Дата прекращения существования юридического лица"
 
 #. /properties/dissolutionDate/description
 #: schema/entity-statement.json:1
@@ -1205,9 +1205,9 @@ msgid ""
 "as YYYY or YYYY-MM."
 msgstr ""
 "Если данный субъект уже не является действующим, укажите дату, в которую он "
-"был распущен или прекратил свою деятельность. Пожалуйста, укажите "
-"максимально точную дату в формате ISO 8601. Если известен только год или год"
-" и месяц, то их можно указать в формате YYYY или YYYY-MM."
+"свое существование или свою деятельность. Пожалуйста, укажите максимально "
+"точную дату в формате ISO 8601. Если известен только год или год и месяц, то"
+" их можно указать в формате YYYY или YYYY-MM."
 
 #. /properties/addresses/title
 #: schema/entity-statement.json:1 schema/person-statement.json:1
@@ -1247,8 +1247,8 @@ msgid ""
 "The source of information about this entity, or of information that supports"
 " an anonymous or unknown entity statement."
 msgstr ""
-"Исходная информация о данном субъекте или информация, подкрепляющая запись о"
-" субъекте с неустановленным владельцем или неизвестном субъекте."
+"Исходная информация о данном субъекте или информация, подтверждающая запись "
+"о субъекте с неустановленным владельцем или неизвестном субъекте."
 
 #. /properties/annotations/title
 #: schema/entity-statement.json:1 schema/ownership-or-control-statement.json:1
@@ -1282,7 +1282,7 @@ msgstr ""
 #. /properties/statementType/description
 #: schema/ownership-or-control-statement.json:1
 msgid "This should always be set to `ownershipOrControlStatement`."
-msgstr "Всегда следует установить значение ownershipOrControlStatement."
+msgstr "Всегда следует установить значение `ownershipOrControlStatement`."
 
 #. /properties/isComponent/description
 #: schema/ownership-or-control-statement.json:1
@@ -1301,17 +1301,17 @@ msgid ""
 "`subject` and the `interestedParty`."
 msgstr ""
 "Представляет ли данная Запись о владении или контроле компонент более "
-"широких отношений косвенного владения или контроля? Если isComponent имеет "
-"значение true: (1) statementID этой дополнительной Записи о владении или "
-"контроле ДОЛЖЕН быть элементом в массиве componentStatementIDs такой "
+"широких отношений косвенного владения или контроля? Если `isComponent` имеет"
+" значение 'true': (1) `statementID` этой дополнительной Записи о владении "
+"или контроле ДОЛЖЕН быть элементом в массиве `componentStatementIDs` такой "
 "основной Записи о владении или контроле, (2) данная Запись о владении или "
 "контроле ДОЛЖНА стоять перед такой основной Записью о владении или контроле "
 "в пакете СДБВ или потоке, (3) замену этой Записи о владении или контроле "
-"СЛЕДУЕТ рассмотреть при замене основной Записи о владении или контроле, а "
-"также (4) в основной Записи о владении или контроле значение isComponent "
-"ДОЛЖНО быть false. Если isComponent имеет значение false, то данная Запись о"
-" владении или контроле является основным объявлением отношений между "
-"предметом (subject) и заинтересованной стороной (interestedParty)."
+"СЛЕДУЕТ учесть при замене основной Записи о владении или контроле, а также "
+"(4) в основной Записи о владении или контроле значение `isComponent` ДОЛЖНО "
+"быть 'false'. Если `isComponent` имеет значение 'false', то данная Запись о "
+"владении или контроле является основным объявлением отношений между "
+"предметом (`subject`) и заинтересованной стороной (`interestedParty`)."
 
 #. /properties/componentStatementIDs/title
 #: schema/ownership-or-control-statement.json:1
@@ -1327,9 +1327,10 @@ msgid ""
 " MUST itself have a `isComponent` value of 'false'."
 msgstr ""
 "Идентификаторы всех записей о компонентах, предоставляющих сведения о "
-"косвенных отношениях между предметом (subject) и заинтересованной стороной "
-"(interestedParty) данной Записи. Если данная Запись о владении или контроле "
-"имеет компоненты, то в ней самой isComponent ДОЛЖЕН иметь значение false."
+"косвенных отношениях между предметом (`subject`) и заинтересованной стороной"
+" (`interestedParty`) данной Записи. Если данная Запись о владении или "
+"контроле имеет компоненты, то в ней самой `isComponent` ДОЛЖЕН иметь "
+"значение 'false'."
 
 #. /properties/subject/title
 #: schema/ownership-or-control-statement.json:1
@@ -1449,14 +1450,14 @@ msgstr ""
 "Когда было предоставлено подтверждение о том, что не существует "
 "заинтересованной стороны, в случае если нет необходимости в предоставлении "
 "информации о владении и контроле или в случае если сведения о владении и "
-"контроле неизвестны, ДОЛЖНА быть указана причина (reason). В случае если "
-"неизвестный субъект является предметом (subject) других Записей о владении "
-"или контроле (ownershipOrControlStatements) в той же структуре, или в случае"
-" если имеется физическое лицо с владением или контролем, но его ФИО или "
-"сведения о нем неизвестны или не могут быть раскрыты по какой-либо причине, "
-"не следует использовать unspecified (не указано), вместо этого следует "
-"указать ссылку на personStatement (запись о физическом лице) или "
-"entityStatement (запись о субъекте), но идентифицирующие сведения МОЖНО "
+"контроле неизвестны, ДОЛЖНА быть указана причина (`reason`). В случае если "
+"неизвестный субъект является предметом (`subject`) других Записей о владении"
+" или контроле (ownershipOrControlStatements) в той же структуре, или в "
+"случае если имеется физическое лицо с владением или контролем, но его ФИО "
+"или сведения о нем неизвестны или не могут быть раскрыты по какой-либо "
+"причине, не следует использовать `unspecified` (не указано), вместо этого "
+"следует указать ссылку на `personStatement` (запись о физическом лице) или "
+"`entityStatement` (запись о субъекте), но идентифицирующие сведения МОЖНО "
 "оставить незаполненными."
 
 #. /definitions/InterestedParty/properties/unspecified/properties/reason/description
@@ -1515,14 +1516,14 @@ msgid ""
 "Statement MUST have a `isComponent` value of 'false'."
 msgstr ""
 "Представляет ли данная Запись о физическом лице компонент отношений "
-"косвенного владения или контроля? Если isComponent имеет значение true: (1) "
-"statementID такой Записи о физическом лице ДОЛЖЕН быть элементом в массиве "
-"componentStatementIDs такой основной Записи о владении или контроле, (2) эта"
-" Запись о физическом лице ДОЛЖНА стоять перед такой основной Записью о "
-"владении или контроле в пакете СДБВ или потоке, (3) замену этой Записи о "
-"физическом лице СЛЕДУЕТ рассмотреть при замене основной Записи о владении "
-"или контроле. Значение isComponent основной Записи о владении или контроле "
-"ДОЛЖНО быть false."
+"косвенного владения или контроля? Если `isComponent` имеет значение 'true': "
+"(1) `statementID` такой Записи о физическом лице ДОЛЖЕН быть элементом в "
+"массиве `componentStatementIDs` такой основной Записи о владении или "
+"контроле, (2) эта Запись о физическом лице ДОЛЖНА стоять перед такой "
+"основной Записью о владении или контроле в пакете СДБВ или потоке, (3) "
+"замену этой Записи о физическом лице СЛЕДУЕТ учесть при замене основной "
+"Записи о владении или контроле. Значение `isComponent` основной Записи о "
+"владении или контроле ДОЛЖНО быть 'false'."
 
 #. /properties/personType/title
 #: schema/person-statement.json:1
@@ -1544,13 +1545,14 @@ msgstr ""
 "Используйте [список допустимых значений personType](#persontype). Конечный "
 "бенефициарный владелец юридического лица всегда является физическим лицом. "
 "Если бенефициарный владелец был идентифицирован, но информация о нем не "
-"может быть раскрыта, используйте anonymousPerson (неустановленное физическое"
-" лицо). Если бенефициарный владелец не был четко идентифицирован, "
-"используйте unknownPerson (неизвестное физическое лицо). Если бенефициарный "
-"владелец был идентифицирован, используйте knownPerson (известное физическое "
-"лицо). Если физическое лицо имеет тип anonymousPerson или unknownPerson, то "
-"в unspecifiedPersonDetails (неуказанные сведения о физическом лице) СЛЕДУЕТ "
-"указать причину отсутствия информации."
+"может быть раскрыта, используйте 'anonymousPerson' (неустановленное "
+"физическое лицо). Если бенефициарный владелец не был четко идентифицирован, "
+"используйте 'unknownPerson' (неизвестное физическое лицо). Если "
+"бенефициарный владелец был идентифицирован, используйте 'knownPerson' "
+"(известное физическое лицо). Если физическое лицо имеет тип "
+"'anonymousPerson' или 'unknownPerson', то в 'unspecifiedPersonDetails' "
+"(неуказанные сведения о физическом лице) СЛЕДУЕТ указать причину отсутствия "
+"информации."
 
 #. /properties/unspecifiedPersonDetails/title
 #: schema/person-statement.json:1
@@ -1563,9 +1565,9 @@ msgid ""
 "An explanation of why this person has a `personType` of 'anonymousPerson' or"
 " 'unknownPerson'. A `reason` MUST be specified."
 msgstr ""
-"Объяснение касательно того, почему personType этого физического лица имеет "
-"значение anonymousPerson или unknownPerson. ДОЛЖНА быть указана причина "
-"(reason)."
+"Объяснение касательно того, почему `personType` этого физического лица имеет"
+" значение 'anonymousPerson' или 'unknownPerson'. ДОЛЖНА быть указана причина"
+" (`reason`)."
 
 #. /properties/names/title
 #: schema/person-statement.json:1
@@ -1633,7 +1635,7 @@ msgid ""
 "provide as precise a date as possible in ISO 8601 format. When only the year"
 " or year and month is known, these can be given as YYYY or YYYY-MM."
 msgstr ""
-"Если этого физического лица уже нет в живых, укажите его дату смерти. "
+"Если этого физического лица уже нет в живых, укажите дату его смерти. "
 "Пожалуйста, укажите максимально точную дату в формате ISO 8601. Если "
 "известен только год или год и месяц, то их можно указать в формате YYYY или "
 "YYYY-MM."
