--- a/docs/locale/ru/LC_MESSAGES/userguides/licensing.po
+++ b/docs/locale/ru/LC_MESSAGES/userguides/licensing.po
@@ -3,13 +3,17 @@
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Valery Gusak <valery.gusak@gmail.com>, 2019
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-17 11:38+0100\n"
+"POT-Creation-Date: 2019-07-01 11:07+0100\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
+"Last-Translator: Valery Gusak <valery.gusak@gmail.com>, 2019\n"
 "Language-Team: Russian (https://www.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,11 +22,11 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 # 95297f51c5dc430ebdf9683581deb5f2
-#: ../../userguides/licensing.md:1
+#: ../../userguides/licensing.rst:2
 msgid "Licensing considerations"
-msgstr ""
+msgstr "Аспекты лицензирования"
 
 # 792eee5f02bf49c39d5b72373086a46a
-#: ../../userguides/licensing.md:4
+#: ../../userguides/licensing.rst:4
 msgid "(TBC)"
-msgstr ""
+msgstr "(Подлежит уточнению)"
