--- a/docs/locale/ru/LC_MESSAGES/userguides/validating-and-verifying.po
+++ b/docs/locale/ru/LC_MESSAGES/userguides/validating-and-verifying.po
@@ -3,13 +3,17 @@
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Valery Gusak <valery.gusak@gmail.com>, 2019
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-17 11:38+0100\n"
+"POT-Creation-Date: 2019-07-01 11:07+0100\n"
 "PO-Revision-Date: 2019-06-17 10:44+0000\n"
+"Last-Translator: Valery Gusak <valery.gusak@gmail.com>, 2019\n"
 "Language-Team: Russian (https://www.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,50 +22,62 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 # 750faa08531d40a78ab3779011c4d630
-#: ../../userguides/validating-and-verifying.md:1
+#: ../../userguides/validating-and-verifying.rst:2
 msgid "Validating and verifying data"
-msgstr ""
+msgstr "Валидация и верификация данных"
 
 # 706b97450bd44f2aaf0b43863e3bb4e8
-#: ../../userguides/validating-and-verifying.md:4
+#: ../../userguides/validating-and-verifying.rst:4
 msgid ""
 "In order to be useful, the data that is published will need to be validated."
 " There are two areas of validation that can be planned for in the producing "
 "data phase."
 msgstr ""
+"Для того, чтобы быть полезными, публикуемые данные должны пройти валидацию. "
+"Существует две области валидации, которые можно спланировать на этапе "
+"выработки данных."
+
+# 918552ac6daa49da8a593d09fba2e2b1
+#: ../../userguides/validating-and-verifying.rst:12
+msgid "Validation against the standard"
+msgstr ""
 
 # 8d18e4044aeb4d938453af2ea279fd31
-#: ../../userguides/validating-and-verifying.md:6
+#: ../../userguides/validating-and-verifying.rst:18
 msgid ""
-"<h2>Validation against the standard</h2> For interoperability with other "
-"publishers data, and to allow for common data analysis tools, releases in "
-"JSON format should validate against the version of the Beneficial Ownership "
-"Data Standard schema used to produce the data. Any serialisations to other "
-"formats should be tested to ensure that the data is correctly represented."
+"For interoperability with other publishers data, and to allow for common "
+"data analysis tools, releases in JSON format should validate against the "
+"version of the Beneficial Ownership Data Standard schema used to produce the"
+" data. Any serialisations to other formats should be tested to ensure that "
+"the data is correctly represented."
 msgstr ""
 
 # 264ad749c0c44a599ed044050a30a4ba
-#: ../../userguides/validating-and-verifying.md:9
+#: ../../userguides/validating-and-verifying.rst:24
 msgid ""
 "For now, generic JSON schema validation tools should be used to test for "
 "correctness. In the future, custom validation tools will be made available "
 "to test the correctness of JSON outputs and serialisation to flat file "
 "formats."
 msgstr ""
+"В настоящее время следует использовать общие средства валидации схемы JSON "
+"для тестирования на предмет правильности. В будущем будут доступны "
+"настраиваемые средства валидации для тестирования правильности выходных "
+"данных JSON и сериализации в форматы неструктурированных файлов."
 
 # e8d34ece0ca34245ab0184a76815e1e1
-#: ../../userguides/validating-and-verifying.md:11
-msgid "<h2>Pre-validation of data during collection</h2>"
+#: ../../userguides/validating-and-verifying.rst:33
+msgid "Pre-validation of data during collection"
 msgstr ""
 
 # af38504e4a49405d9d0ba68cab56842e
-# b90be4bb35644bfaa088be1831c5e7e3
-#: ../../userguides/validating-and-verifying.md:13
-#: ../../userguides/validating-and-verifying.md:17
+# af38504e4a49405d9d0ba68cab56842e
+#: ../../userguides/validating-and-verifying.rst:39
+#: ../../userguides/validating-and-verifying.rst:51
 msgid "(TBC)"
-msgstr ""
+msgstr "(Подлежит уточнению)"
 
 # 8465af1ac779429dbcae3bd188d2448e
-#: ../../userguides/validating-and-verifying.md:15
-msgid "<h2>Verifying data</h2>"
+#: ../../userguides/validating-and-verifying.rst:45
+msgid "Verifying data"
 msgstr ""
